--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,6 +12,9 @@ body{
     min-height: 100vh;
     position: relative;
     font-family: "Poppins", sans-serif;
+    margin: 0 !important;
+    -webkit-margin-before: 0 !important;
+    -webkit-margin-after: 0 !important;
 }
 .strong{
     font-weight: bold;
@@ -118,6 +121,7 @@ tr:nth-child(even) {
     justify-content: space-between;
     width: 100%;
     height: 60px;
+    margin-top: 52px;
     padding: 0 72px;
     position: relative;
     z-index: 10000;
